[package]
name = "molecular-dynamics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#plotters = "0.3.3"
minifb = "0.23.0"
kiss3d = "0.33.0"
nalgebra = "0.29.0"

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters"
#default-features = false
#features = ["ttf"]

[dependencies.plotters-bitmap]
default-features = false
git = "https://github.com/plotters-rs/plotters"
